--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
         <div class="projects-grid">
             <div class="project-card">
-                <img src="https://via.placeholder.com/300x200" alt="Project 1" class="project-image">
+                <img src="gambar_cpanel.jpeg" class="project-image">
                 <div class="project-info">
                     <h3>Proyek 1</h3>
                     <p>Aplikasi web modern yang menampilkan keahlian saya dalam pengembangan front-end.</p>
